--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
             overflow: hidden;
         }
         .image-container {
-            width: auto;
+            width: 540px;
             height: 360px; /* Reduced to 60% of original 600px */
             display: flex;
             justify-content: center;
             align-items: center;
+            position: relative;
         }
         .image-container img {
             max-height: 100%;
