--- a/index.html
+++ b/index.html
@@ -5,22 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>92 Draft Randomizer</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
             background-color: black;
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-wrap: wrap;
             height: 100vh;
             overflow: hidden;
+            margin: 0;
+            padding: 0;
         }
-
-        .grid-container {
+        .container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -28,7 +24,6 @@
             width: 100vw;
             height: 100vh;
         }
-
         .image-container {
             width: 740px;
             height: 560px;
@@ -37,22 +32,20 @@
             align-items: center;
             position: relative;
         }
-
         .image-container img {
             max-width: 100%;
             max-height: 100%;
             object-fit: contain;
             position: absolute;
-            display: none;
+            display: none; /* Initially hidden */
         }
-
         .image-container img.active {
-            display: block;
+            display: block; /* Show only active image */
         }
     </style>
 </head>
 <body>
-    <div class="grid-container" id="gridContainer"></div>
+    <div class="container" id="mainContainer"></div>
 
     <script>
         const imageUrls = [
@@ -85,38 +78,34 @@
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
         ];
 
-        const gridContainer = document.getElementById("gridContainer");
+        const mainContainer = document.getElementById("mainContainer");
         let imageContainers = [];
 
         function createImageContainer() {
-            let container = document.createElement("div");
+            const container = document.createElement("div");
             container.classList.add("image-container");
+            mainContainer.appendChild(container);
 
-            let shuffledImages = [...imageUrls].sort(() => Math.random() - 0.5);
-            let images = [];
-
-            shuffledImages.forEach((src, i) => {
-                let img = document.createElement("img");
+            const shuffledImages = [...imageUrls].sort(() => Math.random() - 0.5);
+            const images = shuffledImages.map(src => {
+                const img = document.createElement("img");
                 img.src = src;
-                if (i === 0) img.classList.add("active");
                 container.appendChild(img);
-                images.push(img);
+                return img;
             });
 
-            gridContainer.appendChild(container);
-            imageContainers.push({ container, images, index: 0 });
+            images[0].classList.add("active");
+            let index = 0;
 
+            function cycleImages() {
+                images[index].classList.remove("active");
+                index = (index + 1) % images.length;
+                images[index].classList.add("active");
+            }
+
+            setInterval(cycleImages, 300); // Speed: 300ms per image
+            imageContainers.push({ container });
             updateGridSize();
-            cycleImages(imageContainers.length - 1);
-        }
-
-        function cycleImages(containerIndex) {
-            let imageSet = imageContainers[containerIndex];
-            setInterval(() => {
-                imageSet.images[imageSet.index].classList.remove("active");
-                imageSet.index = (imageSet.index + 1) % imageSet.images.length;
-                imageSet.images[imageSet.index].classList.add("active");
-            }, 300);
         }
 
         function updateGridSize() {
@@ -124,9 +113,9 @@
             let gridSize = Math.ceil(Math.sqrt(numContainers));
             let newSize = Math.min(window.innerWidth / gridSize, window.innerHeight / gridSize);
 
-            imageContainers.forEach(({ container }) => {
+            imageContainers.forEach(({ container }, i) => {
                 container.style.width = `${newSize}px`;
-                container.style.height = `${(newSize / 740) * 560}px`;
+                container.style.height = `${(newSize / 740) * (560 - (i * 2))}px`; // Reducing height per row
             });
         }
 
@@ -135,8 +124,6 @@
                 createImageContainer();
             }
         });
-
-        window.addEventListener("resize", updateGridSize);
 
         createImageContainer();
     </script>
