--- a/index.html
+++ b/index.html
@@ -5,31 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>92 Draft Randomizer</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
             background-color: black;
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: column;
-            margin: 0;
-            padding: 20px;
+            height: 100vh;
             overflow: hidden;
         }
-        .container {
+
+        .grid-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             align-items: center;
-            width: 100%;
+            width: 100vw;
+            height: 100vh;
         }
+
         .image-container {
+            width: 740px;
+            height: 560px;
             display: flex;
             justify-content: center;
             align-items: center;
             position: relative;
-            overflow: hidden;
-            transition: transform 0.2s ease;
         }
+
         .image-container img {
             max-width: 100%;
             max-height: 100%;
@@ -37,13 +45,14 @@
             position: absolute;
             display: none;
         }
+
         .image-container img.active {
             display: block;
         }
     </style>
 </head>
 <body>
-    <div class="container" id="mainContainer"></div>
+    <div class="grid-container" id="gridContainer"></div>
 
     <script>
         const imageUrls = [
@@ -56,52 +65,68 @@
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg"
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
         ];
 
-        const mainContainer = document.getElementById("mainContainer");
+        const gridContainer = document.getElementById("gridContainer");
         let imageContainers = [];
-        let baseSize = 740; // Base width for image containers
-        let scaleFactor = 1; // Dynamic scale for all images
 
         function createImageContainer() {
-            const container = document.createElement("div");
+            let container = document.createElement("div");
             container.classList.add("image-container");
-            mainContainer.appendChild(container);
-            imageContainers.push(container);
 
-            const shuffledImages = [...imageUrls].sort(() => Math.random() - 0.5);
-            const images = shuffledImages.map(src => {
-                const img = document.createElement("img");
+            let shuffledImages = [...imageUrls].sort(() => Math.random() - 0.5);
+            let images = [];
+
+            shuffledImages.forEach((src, i) => {
+                let img = document.createElement("img");
                 img.src = src;
+                if (i === 0) img.classList.add("active");
                 container.appendChild(img);
-                return img;
+                images.push(img);
             });
 
-            images[0].classList.add("active");
-            let index = 0;
+            gridContainer.appendChild(container);
+            imageContainers.push({ container, images, index: 0 });
 
-            function cycleImages() {
-                images[index].classList.remove("active");
-                index = (index + 1) % images.length;
-                images[index].classList.add("active");
-            }
-
-            setInterval(cycleImages, 300);
             updateGridSize();
+            cycleImages(imageContainers.length - 1);
+        }
+
+        function cycleImages(containerIndex) {
+            let imageSet = imageContainers[containerIndex];
+            setInterval(() => {
+                imageSet.images[imageSet.index].classList.remove("active");
+                imageSet.index = (imageSet.index + 1) % imageSet.images.length;
+                imageSet.images[imageSet.index].classList.add("active");
+            }, 300);
         }
 
         function updateGridSize() {
             let numContainers = imageContainers.length;
-            let maxColumns = Math.floor(window.innerWidth / baseSize);
-            let numRows = Math.ceil(numContainers / maxColumns);
+            let gridSize = Math.ceil(Math.sqrt(numContainers));
+            let newSize = Math.min(window.innerWidth / gridSize, window.innerHeight / gridSize);
 
-            // Adjust scale based on number of rows
-            scaleFactor = Math.max(0.3, 1 - (numRows * 0.1));
-
-            imageContainers.forEach(container => {
-                container.style.width = `${baseSize * scaleFactor}px`;
-                container.style.height = `${(baseSize * 560 / 740) * scaleFactor}px`;
+            imageContainers.forEach(({ container }) => {
+                container.style.width = `${newSize}px`;
+                container.style.height = `${(newSize / 740) * 560}px`;
             });
         }
 
@@ -110,6 +135,8 @@
                 createImageContainer();
             }
         });
+
+        window.addEventListener("resize", updateGridSize);
 
         createImageContainer();
     </script>
