--- a/index.html
+++ b/index.html
@@ -1,144 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>92 Draft Randomizer</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            background-color: black;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            overflow: hidden;
-        }
-
-        .grid-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            width: 100vw;
-            height: 100vh;
-        }
-
-        .image-container {
-            width: 740px;
-            height: 560px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-        }
-
-        .image-container img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain;
-            position: absolute;
-            display: none;
-        }
-
-        .image-container img.active {
-            display: block;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>92 Draft Randomizer</title>
+  <style>
+    /* Reset some default styles */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    /* The grid container fills the viewport */
+    .grid-container {
+      display: grid;
+      width: 100vw;
+      height: 100vh;
+      background-color: black;
+      /* We'll let JavaScript update the grid layout dynamically */
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-auto-rows: 1fr;
+      gap: 0; /* No gap between blocks */
+    }
+    /* Each image block (container) */
+    .image-container {
+      position: relative;
+      overflow: hidden;
+    }
+    /* The images inside a block: they fill the block without cropping (contain the whole image) */
+    .image-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      position: absolute;
+      display: none;
+    }
+    .image-container img.active {
+      display: block;
+    }
+  </style>
 </head>
 <body>
-    <div class="grid-container" id="gridContainer"></div>
+  <!-- The grid container for all image blocks -->
+  <div class="grid-container" id="gridContainer"></div>
+  
+  <script>
+    // Array of 27 image URLs (complete raw URLs)
+    const imageUrls = [
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/03_christian_laettner.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
+      "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
+    ];
 
-    <script>
-        const imageUrls = [
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/03_christian_laettner.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
-        ];
+    const gridContainer = document.getElementById("gridContainer");
 
-        const gridContainer = document.getElementById("gridContainer");
-        let imageContainers = [];
+    // Utility function to shuffle an array (Fisher-Yates)
+    function shuffleArray(arr) {
+      for (let i = arr.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [arr[i], arr[j]] = [arr[j], arr[i]];
+      }
+    }
 
-        function createImageContainer() {
-            let container = document.createElement("div");
-            container.classList.add("image-container");
+    // Create a new image block (container) that cycles through the 27 images in random order.
+    function createImageBlock() {
+      // Make a copy of the imageUrls and shuffle them
+      let shuffled = [...imageUrls];
+      shuffleArray(shuffled);
 
-            let shuffledImages = [...imageUrls].sort(() => Math.random() - 0.5);
-            let images = [];
+      // Create the image container
+      const container = document.createElement("div");
+      container.classList.add("image-container");
 
-            shuffledImages.forEach((src, i) => {
-                let img = document.createElement("img");
-                img.src = src;
-                if (i === 0) img.classList.add("active");
-                container.appendChild(img);
-                images.push(img);
-            });
-
-            gridContainer.appendChild(container);
-            imageContainers.push({ container, images, index: 0 });
-
-            updateGridSize();
-            cycleImages(imageContainers.length - 1);
+      // Create an img element for each URL in the shuffled array
+      shuffled.forEach((url, i) => {
+        const img = document.createElement("img");
+        img.src = url;
+        // For flickering effect, set an animation delay per image (optional)
+        img.style.animationDelay = `${i * 0.1}s`;
+        // Initially, only the first image is visible
+        if (i === 0) {
+          img.classList.add("active");
         }
+        container.appendChild(img);
+      });
 
-        function cycleImages(containerIndex) {
-            let imageSet = imageContainers[containerIndex];
-            setInterval(() => {
-                imageSet.images[imageSet.index].classList.remove("active");
-                imageSet.index = (imageSet.index + 1) % imageSet.images.length;
-                imageSet.images[imageSet.index].classList.add("active");
-            }, 300);
-        }
+      // Append the new container to the grid
+      gridContainer.appendChild(container);
 
-        function updateGridSize() {
-            let numContainers = imageContainers.length;
-            let gridSize = Math.ceil(Math.sqrt(numContainers));
-            let newSize = Math.min(window.innerWidth / gridSize, window.innerHeight / gridSize);
+      // Start cycling images in this block
+      startImageCycle(container);
+      updateGridLayout();
+    }
 
-            imageContainers.forEach(({ container }) => {
-                container.style.width = `${newSize}px`;
-                container.style.height = `${(newSize / 740) * 560}px`;
-            });
-        }
+    // Function to cycle through images in a given container (flicker like a GIF)
+    function startImageCycle(container) {
+      const imgs = container.querySelectorAll("img");
+      let currentIndex = 0;
+      setInterval(() => {
+        imgs[currentIndex].classList.remove("active");
+        currentIndex = (currentIndex + 1) % imgs.length;
+        imgs[currentIndex].classList.add("active");
+      }, 300);
+    }
 
-        document.addEventListener("keydown", (event) => {
-            if (event.key === "Enter") {
-                createImageContainer();
-            }
-        });
+    // Function to update the grid layout so all blocks are equal and fill the screen
+    function updateGridLayout() {
+      // We assume a grid layout that fills the viewport.
+      // We'll recalculate the grid using CSS Grid properties.
+      const blocks = gridContainer.children;
+      const numBlocks = blocks.length;
+      // Determine number of columns for a near-square grid
+      const columns = Math.ceil(Math.sqrt(numBlocks));
+      gridContainer.style.gridTemplateColumns = `repeat(${columns}, 1fr)`;
+      gridContainer.style.gridAutoRows = `1fr`;
+    }
 
-        window.addEventListener("resize", updateGridSize);
+    // On page load, create the first image block
+    window.onload = createImageBlock;
 
-        createImageContainer();
-    </script>
+    // Add event listeners so that a tap/click anywhere triggers a new image block (for mobile and desktop)
+    document.addEventListener("click", createImageBlock);
+    document.addEventListener("touchstart", createImageBlock);
+  </script>
 </body>
 </html>
