--- a/index.html
+++ b/index.html
@@ -1,108 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>92 Draft Randomizer</title>
-    <style>
-        body {
-            background-color: black;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-            align-items: flex-start;
-            height: 100vh;
-            overflow: hidden;
-            margin: 0;
-        }
-        .image-container {
-            width: 740px;
-            height: 560px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0; /* No space between image containers */
-            flex-shrink: 0;
-        }
-        .image-container img {
-            max-height: 100%;
-            max-width: 100%;
-            object-fit: contain;
-            position: absolute;
-            display: none; /* Initially hidden */
-        }
-        .image-container img.active {
-            display: block; /* Show only active image */
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dynamic Image Grid</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background-color: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      padding: 0;
+      box-sizing: border-box;
+      transition: padding 0.3s ease;
+    }
+
+    .image-block {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      background-color: black;
+      overflow: hidden;
+      position: relative;
+      width: 150px; /* Base size */
+      height: 150px; /* Base size */
+      flex-shrink: 0;
+      transition: width 0.3s ease, height 0.3s ease;
+    }
+
+    .image-block img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+
+    /* Responsive */
+    @media (max-width: 767px) {
+      .image-block {
+        width: 20vw;
+        height: 20vw;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div id="imageContainers"></div>
+  <div class="container" id="image-container"></div>
 
-    <script>
-        const imageUrls = [
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/03_christian_laettner.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
-            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
-        ];
+  <script>
+    const imageContainer = document.getElementById('image-container');
+    const images = [
+      'image1.jpg', 'image2.jpg', 'image3.jpg', 'image4.jpg', 'image5.jpg',
+      'image6.jpg', 'image7.jpg', 'image8.jpg', 'image9.jpg', 'image10.jpg',
+      'image11.jpg', 'image12.jpg', 'image13.jpg', 'image14.jpg', 'image15.jpg',
+      'image16.jpg', 'image17.jpg', 'image18.jpg', 'image19.jpg', 'image20.jpg',
+      'image21.jpg', 'image22.jpg', 'image23.jpg', 'image24.jpg', 'image25.jpg',
+      'image26.jpg', 'image27.jpg'
+    ];
 
-        const container = document.getElementById('imageContainers');
+    const minBlockWidth = 150; // Minimum size for each block
 
-        function createImageContainer() {
-            const imageContainer = document.createElement('div');
-            imageContainer.classList.add('image-container');
-            container.appendChild(imageContainer);
+    function getRandomImages() {
+      const shuffled = [...images];
+      for (let i = shuffled.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [shuffled[i], shuffled[j]] = [shuffled[j], shuffled[i]];
+      }
+      return shuffled;
+    }
 
-            // Randomize image sequence
-            const shuffledImages = imageUrls.slice().sort(() => Math.random() - 0.5);
+    function createImageBlock() {
+      const block = document.createElement('div');
+      block.classList.add('image-block');
+      
+      const randomImages = getRandomImages();
+      
+      randomImages.forEach((imageSrc, index) => {
+        const img = document.createElement('img');
+        img.src = imageSrc;
+        img.alt = `Image ${index + 1}`;
+        block.appendChild(img);
+      });
 
-            shuffledImages.forEach((url, index) => {
-                const img = document.createElement('img');
-                img.src = url;
-                img.alt = `Image ${index + 1}`;
-                imageContainer.appendChild(img);
+      imageContainer.appendChild(block);
+      updateLayout();
+    }
 
-                // Add a delay between showing each image
-                setTimeout(() => {
-                    img.classList.add('active');
-                }, 300 * index);
-            });
-        }
+    function updateLayout() {
+      const possibleColumns = Math.floor(window.innerWidth / minBlockWidth);
+      const columns = Math.min(possibleColumns, 10) || 1;
 
-        function handleInputEvent(event) {
-            if (event.type === 'click' || (event.type === 'keydown' && event.key === 'Enter')) {
-                createImageContainer();
-            }
-        }
+      // Adjust the number of columns and padding
+      const containerWidth = imageContainer.offsetWidth;
+      const totalWidth = containerWidth - (columns * minBlockWidth);
+      const columnGap = totalWidth / (columns - 1);
 
-        // Add event listeners
-        document.addEventListener('click', handleInputEvent);
-        document.addEventListener('keydown', handleInputEvent);
+      imageContainer.style.padding = `0 ${columnGap / 2}px`; // Even out spacing between columns
 
-    </script>
+      const blocks = document.querySelectorAll('.image-block');
+      const rows = Math.ceil(blocks.length / columns);
+
+      blocks.forEach(block => {
+        block.style.width = `${containerWidth / columns}px`;
+        block.style.height = `${containerWidth / columns}px`;
+      });
+    }
+
+    // Event listeners for desktop and mobile
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') {
+        createImageBlock();
+      }
+    });
+
+    document.body.addEventListener('click', createImageBlock);
+
+    window.addEventListener('resize', updateLayout);
+
+    // Initial image block
+    createImageBlock();
+  </script>
 </body>
 </html>
+
