--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Image Grid</title>
+  <title>92 draft randomizer</title>
   <style>
     body, html {
       margin: 0;
@@ -63,12 +63,33 @@
   <script>
     const imageContainer = document.getElementById('image-container');
     const images = [
-      'image1.jpg', 'image2.jpg', 'image3.jpg', 'image4.jpg', 'image5.jpg',
-      'image6.jpg', 'image7.jpg', 'image8.jpg', 'image9.jpg', 'image10.jpg',
-      'image11.jpg', 'image12.jpg', 'image13.jpg', 'image14.jpg', 'image15.jpg',
-      'image16.jpg', 'image17.jpg', 'image18.jpg', 'image19.jpg', 'image20.jpg',
-      'image21.jpg', 'image22.jpg', 'image23.jpg', 'image24.jpg', 'image25.jpg',
-      'image26.jpg', 'image27.jpg'
+      'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/03_christian_laettner.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg',
+'https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg'
     ];
 
     const minBlockWidth = 150; // Minimum size for each block
